Publication du site dans sa version finale

--- a/files/TFE.bib
+++ b/files/TFE.bib
@@ -201,6 +201,21 @@
   file = {C\:\\Users\\maxen\\Zotero\\storage\\IB753YA3\\Goldstein et al_2019_Managing the risk of venous thromboembolism in transgender adults undergoing.pdf}
 }
 
+@article{goodman2019,
+  title = {Size and {{Distribution}} of {{Transgender}} and {{Gender Nonconforming Populations}}},
+  author = {Goodman, Michael and Adams, Noah and Corneil, Trevor and Kreukels, Baudewijntje and Motmans, Joz and Coleman, Eli},
+  year = {2019},
+  month = jun,
+  journal = {Endocrinology and Metabolism Clinics of North America},
+  volume = {48},
+  number = {2},
+  pages = {303--321},
+  issn = {08898529},
+  doi = {10.1016/j.ecl.2019.01.001},
+  langid = {english},
+  file = {C\:\\Users\\maxen\\Zotero\\storage\\KBA99KXM\\Goodman et al. - 2019 - Size and Distribution of Transgender and Gender No.pdf}
+}
+
 @article{green2021,
   title = {Association of {{Gender-Affirming Hormone Therapy With Depression}}, {{Thoughts}} of {{Suicide}}, and {{Attempted Suicide Among Transgender}} and {{Nonbinary Youth}}},
   author = {Green, Amy E. and DeChants, Jonah P. and Price, Myeshia N. and Davis, Carrie K.},
@@ -283,7 +298,6 @@
   journal = {Cochrane Database of Systematic Reviews},
   volume = {2020},
   number = {11},
-  pages = {undefined-undefined},
   issn = {14651858},
   abstract = {(2020) Haupt et al. Cochrane Database of Systematic Reviews. Background: Gender dysphoria is described as a mismatch between an individual's experienced or expressed gender and their assigned gende...},
   langid = {british},
@@ -316,7 +330,6 @@
   journal = {International Journal of Environmental Research and Public Health},
   volume = {19},
   number = {3},
-  pages = {undefined-undefined},
   issn = {16604601},
   doi = {10.3390/ijerph19031229},
   abstract = {(2022) Hostetter et al. International Journal of Environmental Research and Public Health. Transgender and nonbinary (TNB) individuals face disparities in nearly every aspect of health. One factor ...},
@@ -515,7 +528,6 @@
   author = {Lee, Joy L. and Huffman, Monica and Rattray, Nicholas A. and Carnahan, Jennifer L. and Fortenberry, J. Dennis and Fogel, Janine M. and Weiner, Michael and Matthias, Marianne S.},
   year = {2022},
   journal = {Journal of General Internal Medicine},
-  pages = {undefined-undefined},
   issn = {15251497},
   doi = {10.1007/s11606-022-07408-5},
   abstract = {(2022) Lee et al. Journal of General Internal Medicine. Background: Transgender individuals are less likely to have had a primary care visit in the last year than cisgender individuals. While the i...},
