Correction de coquilles

--- a/04-results.Rmd
+++ b/04-results.Rmd
@@ -103,7 +103,7 @@ Parmi les patient·e·s ayant fait un coming out à leur famille, `r .p_reac_dif
 knitr::include_graphics('output/plots/fam_plot.png')
 ```
 
-Sur le plan amical, la figure \@ref(fig:AmisPlot) montre un schéma similaire à ce qui a été décrit pour le *coming out* familial avec une moins grande tendance des personnes transféminines à révéler leur transidentité à leurs proches. Ces résultats doivent toutefois être interprétés prudemment dans la mesure où il manque des données pour 9 participant·e·s (5 personnes transféminines et 4 personnes transmasculines). Toutefois, puisque les valeurs manquantes ne touchaient pas disproportionnent un groupe et que les résultats étaient cohérents avec ceux de la figure \@ref(fig:FamPlot), j'ai choisi de présenter ce graphique. En ce qui concerne la réaction des ami·e·s, celle-ci a été positive pour la totalité de l'échantillon.
+Sur le plan amical, la figure \@ref(fig:AmisPlot) montre un schéma similaire à ce qui a été décrit pour le *coming out* familial avec une moins grande tendance des personnes transféminines à révéler leur transidentité à leurs proches. Ces résultats doivent toutefois être interprétés prudemment dans la mesure où il manque des données pour 9 participant·e·s (5 personnes transféminines et 4 personnes transmasculines). Toutefois, puisque les valeurs manquantes ne touchaient pas disproportionnellement un groupe et que les résultats étaient cohérents avec ceux de la figure \@ref(fig:FamPlot), j'ai choisi de présenter ce graphique. En ce qui concerne la réaction des ami·e·s, celle-ci a été positive pour la totalité de l'échantillon.
 
 ```{r AmisPlot, echo=FALSE, warning=FALSE, message=FALSE, fig.align='center', fig.cap="Ami·e·s auxquel·le·s les participant·e·s ont annoncé leur transidentité, par genres", out.width = '100%', out.height='500px', eval = knitr::is_html_output()}
 
@@ -153,7 +153,7 @@ source('scripts/plots/create_sankey_plot.R', encoding = 'UTF-8')
 
 #### Choix du traitement
 
-Comme développé dans l'introduction, l'usage et le choix d'un antiandrogène chez les personnes transféminines demeure controversé. De ce fait, il s'agissait d'une décision partagée prenant en compte l'importance que les patient·e·s accordaient à certains effets du traitement, le coût des molécules, le besoin psychologique d'avoir une T2~s~ dans les valeurs classiques des femmes cisgenres, ainsi que les appréhensions vis-à-vis de l'usage d'un antiandrogène. Le traitement été ensuite réévalué au fil des consultations, en prenant en compte les éléments sus-cités ainsi que les résultats de la prise de sang. Afin de visualiser la répartition des traitements ainsi que les changements successifs au fil des consultations, un diagramme de Sankey a été réalisé (figure \@ref(fig:SankeyPlot)). En début de traitement, `r .p_noaa_T0` des patient·e·s ont choisi d'opter pour une monothérapie œstrogénique et les `r .N_spiro_T0` patient·e·s restant·e·s ont choisi de commencer leur traitement avec de la Spironolactone comme antiandrogène. À T2, deux patient·e·s qui ne prenaient pas d'antiandrogène ont choisi d'en prendre un, en raison d'une T~s~ trop élevée, malgré une E2~s~ satisfaisante. Leur choix s'est alors porté sur de la Spironolactone ou du Depo-Eligard, selon les possibilités financières. De plus, un·e patient·e a préféré passer de la Spironolactone au Depo-Eligard pour des préférences personnelles. Enfin, à T3, un·e des patient·e·s a fait le même changement de molécule, en raison de troubles de la concentration sous Spironolactone. Au niveau de la posologie, la Spironolactone était administrée à raison de 100mg par jour en deux prises tandis que le Depo-Eligard était injecté trimestriellement. Au niveau de l'œstradiol, le choix entre Dermestril et Oestrogel se basait sur des préférences sur le mode d'application ou des questions d'oubli d'application du gel. La posologie était ajustée dans l'objectif d'obtenir une E2~s~ entre 100 et 200ng/L. La posologie de l'Oestrogel se situait entre `r min(.poso_gel)`mg/J et `r max(.poso_gel)`mg/J avec une valeur médiane de `r median(.poso_gel)`mg/J, ce qui correspond respectivement à 2 et 4 pressions par jour. Pour le Dermestril, la posologie des patchs variait entre `r min(.poso_patch)`µg/24h et `r max(.poso_patch)`µg/24h (médiane : `r median(.poso_patch)`µg/24h). Enfin, une patiente a fait le choix du Zumenon, à la posologie de 4mg/J. Le coût annuel du traitement variait entre 42,1€, pour les monothérapies d'Oestrogel, et `r max(obj_ttmt_data$cout_an)`€ pour la combinaison Dermestril + Depo-Eligard (coût annuel médian : `r .med_cout_F`€).
+Comme développé dans l'introduction, l'usage et le choix d'un antiandrogène chez les personnes transféminines demeure controversé. De ce fait, il s'agissait d'une décision partagée prenant en compte l'importance que les patient·e·s accordaient à certains effets du traitement, le coût des molécules, le besoin psychologique d'avoir une T2~s~ dans les valeurs classiques des femmes cisgenres, ainsi que les appréhensions vis-à-vis de l'usage d'un antiandrogène. Le traitement était ensuite réévalué au fil des consultations, en prenant en compte les éléments sus-cités ainsi que les résultats de la prise de sang. Afin de visualiser la répartition des traitements ainsi que les changements successifs au fil des consultations, un diagramme de Sankey a été réalisé (figure \@ref(fig:SankeyPlot)). En début de traitement, `r .p_noaa_T0` des patient·e·s ont choisi d'opter pour une monothérapie œstrogénique et les `r .N_spiro_T0` patient·e·s restant·e·s ont choisi de commencer leur traitement avec de la Spironolactone comme antiandrogène. À T2, deux patient·e·s qui ne prenaient pas d'antiandrogène ont choisi d'en prendre un, en raison d'une T~s~ trop élevée, malgré une E2~s~ satisfaisante. Leur choix s'est alors porté sur de la Spironolactone ou du Depo-Eligard, selon les possibilités financières. De plus, un·e patient·e a préféré passer de la Spironolactone au Depo-Eligard pour des préférences personnelles. Enfin, à T3, un·e des patient·e·s a fait le même changement de molécule, en raison de troubles de la concentration sous Spironolactone. Au niveau de la posologie, la Spironolactone était administrée à raison de 100mg par jour en deux prises tandis que le Depo-Eligard était injecté trimestriellement. Au niveau de l'œstradiol, le choix entre Dermestril et Oestrogel se basait sur des préférences sur le mode d'application ou des questions d'oubli d'application du gel. La posologie était ajustée dans l'objectif d'obtenir une E2~s~ entre 100 et 200ng/L. La posologie de l'Oestrogel se situait entre `r min(.poso_gel)`mg/J et `r max(.poso_gel)`mg/J avec une valeur médiane de `r median(.poso_gel)`mg/J, ce qui correspond respectivement à 2 et 4 pressions par jour. Pour le Dermestril, la posologie des patchs variait entre `r min(.poso_patch)`µg/24h et `r max(.poso_patch)`µg/24h (médiane : `r median(.poso_patch)`µg/24h). Enfin, une patiente a fait le choix du Zumenon, à la posologie de 4mg/J. Le coût annuel du traitement variait entre 42,1€, pour les monothérapies d'Oestrogel, et `r max(obj_ttmt_data$cout_an)`€ pour la combinaison Dermestril + Depo-Eligard (coût annuel médian : `r .med_cout_F`€).
 
 ```{r SankeyPlot, echo=FALSE, warning=FALSE, message=FALSE, fig.align='center', fig.cap="Évolution du choix d'antiandrogène au fil des consultations", out.width = '100%', out.height='450px', eval = knitr::is_html_output()}
 
