Correction de coquilles

--- a/05-discussion.Rmd
+++ b/05-discussion.Rmd
@@ -40,7 +40,7 @@ Chez les patient·e·s transféminin·e·s, la vaginoplastie et les chirurgies d
 
 ### Les limites des intervalles de référence
 
-Une des difficultés par rapport à l'interprétation des prises de sang est qu'il n'existe pas de consensus sur les intervalles à utiliser chez les personnes transgenres sous THAG [@sorelle2019]. Un bon exemple de cela est l'évaluation de la fonction rénale à travers le MDRD. En effet, cette formule dépend du taux de créatinine, de l'âge et est multipliée par 0.742 pour les femmes [@meulders2022] . Cela signifie que pour un même taux de créatinine, les femmes ont une fonction rénale calculée comme 25% inférieure à celle des hommes. En pratique, en revoyant une patiente pour la première fois après son changement de marqueur de genre, j'ai d'abord cru qu'elle faisait une insuffisance rénale aiguë en regardant sa fonction rénale à la prise de sang, avant de réaliser que sa créatinine n'avait pas augmenté et que la différence provenait du fait que le laboratoire utilisait désormais les formules dédiées aux femmes. Or, si les valeurs de créatine diminuent sous THAG féminisant, elles n'atteignent pas celles des femmes cisgenres [@greene2021]. Dans le même ordre d'idée, les patient·e·s sons THAG masculinisant ont une T~s~ comparable à celle des hommes cisgenres, mais une E2~s~ et une FSH plus élevées [@greene2021]. Les intervalles et formules employées par les laboratoire ne peuvent donc pas être suivis aveuglément et l'objectif d'obtenir des valeurs identiques à celles des personnes cisgenres mériterait sans doute d'être nuancé.
+Une des difficultés par rapport à l'interprétation des prises de sang est qu'il n'existe pas de consensus sur les intervalles à utiliser chez les personnes transgenres sous THAG [@sorelle2019]. Un bon exemple de cela est l'évaluation de la fonction rénale à travers le MDRD. En effet, cette formule dépend du taux de créatinine, de l'âge et est multipliée par 0.742 pour les femmes [@meulders2022] . Cela signifie que pour un même taux de créatinine, les femmes ont une fonction rénale calculée comme 25% inférieure à celle des hommes. En pratique, en revoyant une patiente pour la première fois après son changement de marqueur de genre, j'ai d'abord cru qu'elle faisait une insuffisance rénale aiguë en regardant sa fonction rénale à la prise de sang, avant de réaliser que sa créatinine n'avait pas augmenté et que la différence provenait du fait que le laboratoire utilisait désormais les formules dédiées aux femmes. Or, si les valeurs de créatine diminuent sous THAG féminisant, elles n'atteignent pas celles des femmes cisgenres [@greene2021]. Dans le même ordre d'idée, les patient·e·s sous THAG masculinisant ont une T~s~ comparable à celle des hommes cisgenres, mais une E2~s~ et une FSH plus élevées [@greene2021]. Les intervalles et formules employées par les laboratoire ne peuvent donc pas être suivis aveuglément et l'objectif d'obtenir des valeurs identiques à celles des personnes cisgenres mériterait sans doute d'être nuancé.
 
 ### Impact du THAG masculinisant sur les paramètres biologiques
 
